--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,8 +9,8 @@
 <ion-content>
 
   <div class="cuerpo">
-    <br><br><br>
-    <center><img class="logo" src="assets/favicon.png" alt="location"></center>
+    <br>
+    <center><img class="logo" src="assets/logo.png" height="100px" alt="location"></center>
 <br>
 <ion-item color="primary" class="parrafo">
   <ion-label class="titulo"><h1>Iniciar Sesión</h1></ion-label>
