--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -10,55 +10,57 @@
 </ion-header>
 
 <ion-content>
+  <ion-card>
 
-  <form #formulario="ngForm" (ngSubmit)="onSubmit()">
-  
-    <ion-list-header color="warning">
-      <ion-label>Registro de usuario: {{formulario.valid}} </ion-label>
-    </ion-list-header>
+
+    <ion-card-header>
+      <ion-card-title>Registro Usuario</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+       <form [formGroup]="formularioRegistro" (keyup.enter)="CrearUsuario()">
 
     <ion-item color="dark">
       <ion-label>Nombre: </ion-label>
       <ion-input type="text" placeholder="Nombre"
-                 name="nombre" [(ngModel)]= "usuario.nombre" required>
+                 formControlName="nombre"
+                 pattern="^([a-zA-Z]{2,15})"  required>
       </ion-input>
     </ion-item>
 
     <ion-item color="dark">
       <ion-label>Correo: </ion-label>
       <ion-input type="email" placeholder="Correo Duoc"
-                 name="email" value="" [(ngModel)]= "usuario.email"
+                 formControlName="correo" value=""
                  pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
                  required>
       </ion-input>
     </ion-item>
 
+
     <ion-item color="dark">
       <ion-label>Password: </ion-label>
       <ion-input type="password"	 placeholder="Contraseña"
-                 name="password" value="" [(ngModel)]= "usuario.password"
+                 formControlName="password" value="" 
+                 pattern="([a-zA-Z0-9_\-\.]{4,15})"
                  required>
       </ion-input>
-      
     </ion-item>
+
     <ion-list>
       <ion-item color="dark">
-        <ion-select placeholder="Tipo de usuario">
+        <ion-select placeholder="Tipo de usuario" formControlName="tipo">
           <ion-select-option value="docente">Docente</ion-select-option>
           <ion-select-option value="alumno">Alumno</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
-
-    <ion-button color="primary"[disabled] ="formulario.invalid"
-            type="submit" routerLink="/home"  rexpand="block" >
-      Registrame
-    </ion-button>
     
+    <br>
+       <ion-button (click)="CrearUsuario()" expand="block" fill="outline" shape="round" routerLink="/home">Registrar</ion-button></form>
 
- 
-
-  </form>
+    </ion-card-content>
+  </ion-card>
 
 
 </ion-content>
